No wildcards in store artifacts

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,7 @@ jobs:
           name: Build
           command: ./build_all
       - store_artifacts:
-          path: /root/project/build/Seccubus*.tar.gz
+          path: /root/project/build/
 
   build_deb:
     docker:
@@ -304,7 +304,7 @@ jobs:
           paths:
             - "/root/project/build"
       - store_artifacts:
-          path: /root/project/build/*.rpm
+          path: /root/project/build/
 
   test_fc26:
     docker:
@@ -345,7 +345,7 @@ jobs:
           paths:
             - "/root/project/build"
       - store_artifacts:
-          path: /root/project/build/*.rpm
+          path: /root/project/build/
 
   test_fc25:
     docker:
