--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -391,7 +391,7 @@ jobs:
 
   test_el7:
     docker:
-      - image: fedora:25
+      - image: centos:7
     steps:
       - run:
           name: Generate build signature
@@ -401,7 +401,7 @@ jobs:
       - run: ls -al build
       - run:
           name: Install rpm
-          command: dnf install -y build/*el7*rpm
+          command: yum install -y epel-release && yum install -y build/*el7*rpm
       - run:
           name: Start hypnotoad
           command: cd /opt/seccubus; hypnotoad seccubus.pl
