--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,22 @@
 version: 2
 jobs:
 
+  cache_perl:
+    docker:
+      - image: perl:latest
+        environment:
+        - PERL5LIB: "."
+    steps:
+      - checkout
+      - restore_cache:
+          key: cpanm-{{ .Environment.CIRCLE_SHA1 }}
+      - run: cpanm --notest REHSACK/List-MoreUtils-XS-0.425_001.tar.gz
+      - run: cpanm --installdeps --notest .
+      - save_cache:
+          key: cpanm-{{ .Environment.CIRCLE_SHA1 }}
+          paths:
+            - "/usr/local/lib/perl5/site_perl"
+
   unit_tests:
     docker:
       - image: perl:latest
@@ -16,13 +32,9 @@ jobs:
           name: Install prerequisite packages
           command: apt-get update; apt-get -y install build-essential zip dnsutils bsdmainutils mysql-client ssh git
       - restore_cache:
-          key: cpanm-{{ checksum "Makefile.PL" }}
+          key: cpanm-{{ .Environment.CIRCLE_SHA1 }}
       - run: cpanm --notest REHSACK/List-MoreUtils-XS-0.425_001.tar.gz
       - run: cpanm --installdeps --notest .
-      - save_cache:
-          key: cpanm-{{ checksum "Makefile.PL" }}
-          paths:
-            - "/usr/local/lib/perl5/site_perl"
       - run:
           name: Wait for database
           command: |
@@ -53,7 +65,7 @@ jobs:
           name: Install prerequisite packages
           command: apt-get update; apt-get -y install build-essential zip dnsutils bsdmainutils mysql-client default-jre
       - restore_cache:
-          key: cpanm-{{ checksum "Makefile.PL" }}
+          key: cpanm-{{ .Environment.CIRCLE_SHA1 }}
       - run:
           name: Build
           command: ./build_all
@@ -288,14 +300,14 @@ jobs:
     docker:
       - image: fedora:26
     steps:
-      - run: dnf install -y git make
+      - run: dnf install -y git
       - checkout
       - run:
           name: Generate build signature
           command: echo $CIRCLE_SHA1 > .git-describe
       - run:
           name: Install prerequisite packages
-          command: dnf install -y fedora-packager fedora-review java-1.8.0-openjdk-headless "perl(ExtUtils::MakeMaker)" gpg rpm-sign
+          command: dnf install -y fedora-packager fedora-review java-1.8.0-openjdk-headless "perl(ExtUtils::MakeMaker)" gpg rpm-sign make
       - run:
           name: Build
           command: rpm/makerpm.sh
@@ -367,7 +379,49 @@ jobs:
           name: Seccubus should be running on port 8443
           command: echo -n >/dev/tcp/localhost/8443
 
-  fedora_ok:
+  build_el7:
+    docker:
+      - image: centos:7
+    steps:
+      - run: yum install -y git
+      - checkout
+      - run:
+          name: Generate build signature
+          command: echo $CIRCLE_SHA1 > .git-describe
+      - run:
+          name: Install prerequisite packages
+          command: yum install -y java-1.8.0-openjdk-headless "perl(ExtUtils::MakeMaker)" gpg rpm-sign rpm-build make "perl(Test::Simple)" "perl(CPAN)"
+      - run:
+          name: Build
+          command: rpm/makerpm.sh
+      - save_cache:
+          key: rpm-el7-{{ .Branch }}-{{ checksum ".git-describe" }}
+          paths:
+            - "/root/project/build"
+      - store_artifacts:
+          path: /root/project/build/
+
+  test_el7:
+    docker:
+      - image: centos:7
+    steps:
+      - run:
+          name: Generate build signature
+          command: echo $CIRCLE_SHA1 > .git-describe
+      - restore_cache:
+          key: rpm-el7-{{ .Branch }}-{{ checksum ".git-describe" }}
+      - run: ls -al build
+      - run:
+          name: Install rpm
+          command: yum install -y epel-release && yum install -y build/*el7*rpm
+      - run:
+          name: Start hypnotoad
+          command: cd /opt/seccubus; hypnotoad seccubus.pl
+      - run:
+          name: Seccubus should be running on port 8443
+          command: echo -n >/dev/tcp/localhost/8443
+
+  el_ok:
     docker:
       - image: alpine
     steps:
@@ -375,6 +429,10 @@ jobs:
       - run:
           name: Generate build signature
           command: echo $CIRCLE_SHA1 > .git-describe
+      - restore_cache:
+          key: rpm-el7-{{ .Branch }}-{{ checksum ".git-describe" }}
+      - store_artifacts:
+          path: /root/project/build
       - restore_cache:
           key: rpm-fc25-{{ .Branch }}-{{ checksum ".git-describe" }}
       - store_artifacts:
@@ -384,7 +442,7 @@ jobs:
       - store_artifacts:
           path: /root/project/build
 
-  fedora_upload:
+  el_upload:
     docker:
       - image: alpine
     steps:
@@ -397,6 +455,11 @@ jobs:
       - run:
           name: Setup package cloud
           command: gem install package_cloud -N
+      - restore_cache:
+          key: rpm-el7-{{ .Branch }}-{{ checksum ".git-describe" }}
+      - run:
+          name : Upload to packagecloud.io
+          command: package_cloud push seccubus/latest/el/7 build/*el7*rpm
       - restore_cache:
           key: rpm-fc25-{{ .Branch }}-{{ checksum ".git-describe" }}
       - run:
@@ -410,7 +473,7 @@ jobs:
           name : Upload to packagecloud.io
           command: package_cloud push seccubus/latest/fedora/26 build/*fc26*rpm
 
-  fedora_upload_release:
+  el_upload_release:
     docker:
       - image: alpine
     steps:
@@ -423,6 +486,11 @@ jobs:
       - run:
           name: Setup package cloud
           command: gem install package_cloud -N
+      - restore_cache:
+          key: rpm-el7-{{ .Branch }}-{{ checksum ".git-describe" }}
+      - run:
+          name : Upload to packagecloud.io
+          command: package_cloud push seccubus/releases/el/7 build/*el7*rpm
       - restore_cache:
           key: rpm-fc25-{{ .Branch }}-{{ checksum ".git-describe" }}
       - run:
@@ -442,7 +510,10 @@ workflows:
 
   unit_and_integration_tests:
     jobs:
-      - unit_tests
+      - cache_perl
+      - unit_tests:
+          requires:
+            - cache_perl
       - build:
           requires:
             - unit_tests
@@ -491,8 +562,12 @@ workflows:
               only:
                 - releases
 
-  fedora_package_building:
+  el_package_building:
     jobs:
+      - build_el7
+      - test_el7:
+          requires:
+            - build_el7
       - build_fc25
       - test_fc25:
           requires:
@@ -501,20 +576,21 @@ workflows:
       - test_fc26:
           requires:
             - build_fc26
-      - fedora_ok:
+      - el_ok:
           requires:
+            - test_el7
             - test_fc25
             - test_fc26
-      - fedora_upload:
+      - el_upload:
           requires:
-            - fedora_ok
+            - el_ok
           filters:
             branches:
               only:
                 - master
-      - fedora_upload_release:
+      - el_upload_release:
           requires:
-            - fedora_ok
+            - el_ok
           filters:
             branches:
               only:
