Upload releases to releases

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -500,8 +500,8 @@ jobs:
           command: |
             cd build
             for file in *el7*rpm; do
-              if [[ $(curl -I https://packagecloud.io/seccubus/latest/packages/el/7/$file|grep 404|wc -l) -eq 0 ]]; then
-                package_cloud push seccubus/latest/el/7 $file
+              if [[ $(curl -I https://packagecloud.io/seccubus/releases/packages/el/7/$file|grep 404|wc -l) -eq 0 ]]; then
+                package_cloud push seccubus/releases/el/7 $file
               fi
             done
             cd ..
