--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -525,7 +525,7 @@ workflows:
   unit_and_integration_tests:
     jobs:
       #- cache_perl
-      - unit_tests:
+      - unit_tests
       #    requires:
       #      - cache_perl
       - build:
