This should do it...

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,7 +97,7 @@ jobs:
       - restore_cache:
           key: junit-3-{{ .Environment.CIRCLE_SHA1 }}
       - store_test_results:
-          path: /root/project/testout/*
+          path: /root/project/testout/
       - store_artifacts:
           path: /root/project/testout/
 
