Force use of native mysql passwords

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,8 @@ jobs:
         environment:
         - PERL5LIB: "."
         - MYSQL_HOME: "/root/project/.circleci"
-      - image: circleci/mysql:latest
+      - image: circleci/mysql:
+        command: [ '--default-authentication-plugin=mysql_native_password' ]
     parallelism: 3
 
     steps:
