Building new docker image (full)

--- a/docker-files/front-tls.conf
+++ b/docker-files/front-tls.conf
@@ -1,5 +1,5 @@
 #
-# Copyright 2017 Frank Breedijk
+# Copyright 2017-2018 Frank Breedijk
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -41,7 +41,7 @@ server {
     ssl_certificate /opt/seccubus/data/seccubus.pem;
     ssl_certificate_key /opt/seccubus/data/seccubus.key;
     ssl_session_timeout 1d;
-    ssl_session_cache shared:SSL:50m;
+    #ssl_session_cache shared:SSL:50m;
     ssl_session_tickets off;
 
 
