--- a/docker-files/hooks/build
+++ b/docker-files/hooks/build
@@ -18,8 +18,8 @@ set -e
 echo "Build hook running"
 
 IMAGE_NAME=${IMAGE_NAME:-$1}
-BUILD_NAME=${IMAGE_NAME:-'seccubus'}
-BUILD_NAME=${BUILD_NAME##index*/}
+IMAGE_NAME=${IMAGE_NAME:-'seccubus'}
+BUILD_NAME=${IMAGE_NAME##index*/}
 BUILD_NAME=${BUILD_NAME%:*}
 
 if [[ "$BUILD_NAME" == "seccubus" ]]; then
