--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,27 +3,30 @@ jobs:
 
   cache_perl:
     docker:
-      - image: perl:latest
+      - image: alpine:latest
         environment:
         - PERL5LIB: "."
     steps:
       - checkout
-      - restore_cache:
-          key: cpanm-{{ checksum "Makefile.PL" }}-v2
-      - run: cpanm --notest REHSACK/List-MoreUtils-XS-0.425_001.tar.gz
-      - run: cpanm --installdeps --notest .
+      -run:
+          name: Install prerequisite packages
+          command:
+            apk update
+            apk add wget linux-headers perl-dev perl-app-cpanminus gcc libc-dev make perl-type-tiny \
+            perl-digest-hmac perl-module-runtime perl-try-tiny perl-moo perl-strictures perl-test-fatal \
+            perl-namespace-autoclean
+      - run: cpanm Digest::SHA3
+      - run: cpanm Crypt::PBKDF2
+
       - save_cache:
           key: cpanm-{{ .Environment.CIRCLE_SHA1 }}
           paths:
             - "/usr/local/lib/perl5/site_perl"
-      - save_cache:
-          key: cpanm-{{ checksum "Makefile.PL" }}-v2
-          paths:
-            - "/usr/local/lib/perl5/site_perl"
+            - "/usr/local/share/perl5/site_perl"
 
   unit_tests:
     docker:
-      - image: perl:latest
+      - image: alpine:latest
         environment:
         - PERL5LIB: "."
         - MYSQL_HOME: "/root/project/.circleci"
@@ -34,13 +37,18 @@ jobs:
 
     steps:
       - checkout
-      - run:
+      -run:
           name: Install prerequisite packages
-          command: apt-get update; apt-get -y install build-essential zip dnsutils bsdmainutils mysql-client ssh git
+          command:
+            apk update
+            apk add make mysql-client \
+            perl-dbd-mysql perl-dbi perl-date-format perl-html-parser perl-json perl-libwww \
+            perl-lwp-protocol-https perl-net-ip perl-term-readkey perl-xml-simple perl-app-cpanminus \
+            perl-mojolicious perl-algorithm-diff perl-module-build perl-namespace-autoclean perl-moo \
+            perl-strictures perl-test-fatal perl-digest-hmac perl-type-tinyperl-type-tiny perl-digest-hmac \
+            perl-module-runtime perl-try-tiny perl-moo perl-strictures perl-test-fatal perl-namespace-autoclean
       - restore_cache:
           key: cpanm-{{ .Environment.CIRCLE_SHA1 }}
-      - run: cpanm --notest REHSACK/List-MoreUtils-XS-0.425_001.tar.gz
-      - run: cpanm --notest TAP::Harness::JUnit
       - run: cpanm --installdeps --notest .
       - run:
           name: Wait for database
